baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unreachable arm
     ╭─[ llm_types.baml:152:17 ]
     │
 152 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:189:17 ]
     │
 189 │ ╭─▶             _ => {
     ┆ ┆   
 194 │ ├─▶             }
     │ │                   
     │ ╰─────────────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:208:17 ]
     │
 208 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: unresolved name: GPT4
   ╭─[ ambiguous_function.baml:1:1 ]
   │
 1 │ ╭─▶ // This could initially look like either type
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── unresolved name: GPT4
   │     
   │     Note: Error code: E0001
───╯

  [parse] Error: Expected LLM function missing 'prompt' field, found '}'
   ╭─[ ambiguous_function.baml:5:1 ]
   │
 5 │ }
   │ ┬  
   │ ╰── Expected LLM function missing 'prompt' field, found '}'
   │ 
   │ Note: Error code: E0010
───╯

  [type] Error: type mismatch: expected baml.llm.Client, got null
    ╭─[ ambiguous_function.baml:5:2 ]
    │
  5 │ ╭─▶ }
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── type mismatch: expected baml.llm.Client, got null
    │     
    │     Note: Error code: E0001
────╯

  [parse] Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'clent', found identifier
   ╭─[ ambiguous_function.baml:9:3 ]
   │
 9 │   clent GPT4  // Typo in "client"
   │   ──┬──  
   │     ╰──── Expected Only 'client' and 'prompt' allowed in LLM function, found 'clent', found identifier
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'GPT4', found identifier
   ╭─[ ambiguous_function.baml:9:9 ]
   │
 9 │   clent GPT4  // Typo in "client"
   │         ──┬─  
   │           ╰─── Expected Only 'client' and 'prompt' allowed in LLM function, found 'GPT4', found identifier
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected LLM function missing 'client' field, found '}'
    ╭─[ ambiguous_function.baml:11:1 ]
    │
 11 │ }
    │ ┬  
    │ ╰── Expected LLM function missing 'client' field, found '}'
    │ 
    │ Note: Error code: E0010
────╯

  [type] Error: unresolved name: GPT4
   ╭─[ llm_function.baml:1:47 ]
   │
 1 │ ╭─▶ function ExtractData(text: string) -> JsonData {
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── unresolved name: GPT4
   │     
   │     Note: Error code: E0001
───╯

  [type] Error: unresolved name: GPT4
    ╭─[ mixed_functions.baml:1:1 ]
    │
  1 │ ╭─▶ // Mix of LLM and expression functions in one file
    ┆ ┆   
 10 │ ├─▶ }
    │ │       
    │ ╰─────── unresolved name: GPT4
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unresolved name: GPT4
    ╭─[ mixed_functions.baml:31:49 ]
    │
 31 │ ╭─▶ function ChainedProcess(input: string) -> string {
    ┆ ┆   
 39 │ ├─▶ }
    │ │       
    │ ╰─────── unresolved name: GPT4
    │     
    │     Note: Error code: E0001
────╯
